--- a/HammadAsif.ipynb
+++ b/HammadAsif.ipynb
@@ -1,5 +1,24 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.sql import SparkSession\n",
+    "\n",
+    "# Initialize Spark session\n",
+    "spark = SparkSession.builder.master(\"local\").appName(\"Netflix EDA\").getOrCreate()\n",
+    "\n",
+    "# Load the dataset\n",
+    "df = spark.read.csv(\"/datasets/netflix.csv\", header=True, inferSchema=True)\n",
+    "\n",
+    "\n",
+    "df.show()"
+   ]
+  }
+ ],
  "metadata": {
   "kernelspec": {
    "display_name": "Python 3",
